[gd_scene load_steps=23 format=3 uid="uid://df6y383trua7o"]

[ext_resource type="PackedScene" uid="uid://c42gelag4evva" path="res://app/scenes/apps/schem.tscn" id="1_mjjyt"]
[ext_resource type="FontFile" uid="uid://b3f143kxupihc" path="res://app/assets/fonts/MesloLGMNerdFontPropo-Bold.ttf" id="2_r37u7"]
[ext_resource type="Script" uid="uid://ccax6xg64kkmg" path="res://app/scripts/apps/settings.gd" id="2_y6p8u"]
[ext_resource type="FontFile" uid="uid://bjpvol8rhvix7" path="res://app/assets/fonts/CaskaydiaMonoNerdFontMono-Regular.ttf" id="4_r37u7"]
[ext_resource type="FontFile" uid="uid://y4i3q5orpibv" path="res://app/assets/fonts/JetBrainsMonoNerdFont-Medium.ttf" id="4_x65ee"]
[ext_resource type="Script" uid="uid://bsx13m31rcyax" path="res://app/scripts/apps/quit_dialog.gd" id="6_x65ee"]
[ext_resource type="FontFile" uid="uid://d1n0ho86latqk" path="res://app/assets/fonts/0xProtoNerdFontPropo-Bold.ttf" id="7_0wfsq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y6p8u"]
bg_color = Color(0.85098, 0.85098, 0.85098, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.85098, 0.85098, 0.85098, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="LabelSettings" id="LabelSettings_tapmq"]
font = ExtResource("2_r37u7")
font_size = 24
font_color = Color(0.466181, 0.466181, 0.466181, 1)

[sub_resource type="LabelSettings" id="LabelSettings_4qog7"]
font = ExtResource("4_r37u7")
font_size = 23
font_color = Color(0.466181, 0.466181, 0.466181, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_be3u2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m1py6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j5n7g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0hsdc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g368c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l8v0f"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r37u7"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tapmq"]
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.6, 0.6, 0.6, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0, 0, 0, 0)
shadow_size = 10
shadow_offset = Vector2(0, 15)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4qog7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8of6i"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ybc3b"]

[sub_resource type="LabelSettings" id="LabelSettings_3feow"]
font = ExtResource("7_0wfsq")
font_size = 31
font_color = Color(0, 0, 0, 1)

[node name="settings" instance=ExtResource("1_mjjyt")]
offset_right = -1240.0
offset_bottom = -752.0
script = ExtResource("2_y6p8u")

[node name="app-container" parent="." index="0"]
visible = false

[node name="background" type="Panel" parent="." index="1"]
layout_mode = 0
offset_left = 288.0
offset_top = 128.0
offset_right = 992.0
offset_bottom = 512.0
theme_override_styles/panel = SubResource("StyleBoxFlat_y6p8u")

[node name="settings" type="Control" parent="." index="2"]
anchors_preset = 0
offset_left = 264.0
offset_top = 104.0
offset_right = 304.0
offset_bottom = 144.0

[node name="main label" type="Label" parent="settings" index="0"]
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 1042.0
offset_bottom = 65.0
text = "Click on labels to toggle enable/disable.
"
label_settings = SubResource("LabelSettings_tapmq")

[node name="blue-light-filter" type="Control" parent="settings" index="1"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="settings/blue-light-filter" index="0"]
layout_mode = 0
offset_left = 32.0
offset_top = 72.0
offset_right = 745.0
offset_bottom = 105.0
text = "Add an eyes comfort effect, nice for study at night"
label_settings = SubResource("LabelSettings_4qog7")

[node name="btn" type="Button" parent="settings/blue-light-filter" index="1"]
layout_mode = 0
offset_left = 32.0
offset_top = 96.0
offset_right = 338.0
offset_bottom = 144.0
theme_override_colors/font_hover_pressed_color = Color(0, 0.788235, 0, 1)
theme_override_colors/font_hover_color = Color(0.419813, 0.419813, 0.419813, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_x65ee")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_be3u2")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_m1py6")
theme_override_styles/hover = SubResource("StyleBoxEmpty_j5n7g")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_0hsdc")
theme_override_styles/normal = SubResource("StyleBoxEmpty_g368c")
toggle_mode = true
text = "blue light filter"
flat = true
alignment = 0

[node name="fullscreen" type="Control" parent="settings" index="2"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="settings/fullscreen" index="0"]
layout_mode = 0
offset_left = 32.0
offset_top = 152.0
offset_right = 745.0
offset_bottom = 185.0
text = "Set application in fullscreen"
label_settings = SubResource("LabelSettings_4qog7")

[node name="btn2" type="Button" parent="settings/fullscreen" index="1"]
layout_mode = 0
offset_left = 32.0
offset_top = 176.0
offset_right = 338.0
offset_bottom = 224.0
theme_override_colors/font_hover_pressed_color = Color(0, 0.788235, 0, 1)
theme_override_colors/font_hover_color = Color(0.419813, 0.419813, 0.419813, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_x65ee")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_be3u2")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_m1py6")
theme_override_styles/hover = SubResource("StyleBoxEmpty_j5n7g")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_0hsdc")
theme_override_styles/normal = SubResource("StyleBoxEmpty_g368c")
toggle_mode = true
text = "fullscreen"
flat = true
alignment = 0

[node name="clear-data" type="Control" parent="settings" index="3"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="settings/clear-data" index="0"]
layout_mode = 0
offset_left = 32.0
offset_top = 232.0
offset_right = 1041.0
offset_bottom = 265.0
text = "Clear all saved data : notes, pomo settings, etc.
Please restart app after."
label_settings = SubResource("LabelSettings_4qog7")

[node name="btn3" type="Button" parent="settings/clear-data" index="1"]
layout_mode = 0
offset_left = 32.0
offset_top = 288.0
offset_right = 338.0
offset_bottom = 336.0
theme_override_colors/font_hover_pressed_color = Color(0, 0.788235, 0, 1)
theme_override_colors/font_hover_color = Color(0.419813, 0.419813, 0.419813, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_x65ee")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_be3u2")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_m1py6")
theme_override_styles/hover = SubResource("StyleBoxEmpty_j5n7g")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_0hsdc")
theme_override_styles/normal = SubResource("StyleBoxEmpty_g368c")
text = "clear user data"
flat = true
alignment = 0

[node name="clear-data2" type="Control" parent="settings" index="4"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HSlider" type="HSlider" parent="settings/clear-data2" index="0"]
layout_mode = 0
offset_left = 32.0
offset_top = 384.0
offset_right = 296.0
offset_bottom = 400.0
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_l8v0f")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_r37u7")
max_value = 20.0
step = 0.1
value = 10.0

[node name="Label" type="Label" parent="settings/clear-data2" index="1"]
layout_mode = 0
offset_left = 32.0
offset_top = 344.0
offset_right = 745.0
offset_bottom = 377.0
text = "Change global volume off the app"
label_settings = SubResource("LabelSettings_4qog7")

[node name="quit_dialog" type="Control" parent="." index="3"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("6_x65ee")

[node name="Panel" type="Panel" parent="quit_dialog" index="0"]
layout_mode = 0
offset_left = 448.0
offset_top = 272.0
offset_right = 832.0
offset_bottom = 384.0
theme_override_styles/panel = SubResource("StyleBoxFlat_tapmq")

[node name="yes" type="Button" parent="quit_dialog" index="1"]
layout_mode = 0
offset_left = 744.0
offset_top = 328.0
offset_right = 810.0
offset_bottom = 374.0
theme_override_colors/font_color = Color(0.237539, 0.237539, 0.237539, 1)
theme_override_colors/font_pressed_color = Color(0.572988, 0.572988, 0.572988, 1)
theme_override_fonts/font = ExtResource("7_0wfsq")
theme_override_font_sizes/font_size = 31
theme_override_styles/focus = SubResource("StyleBoxEmpty_4qog7")
theme_override_styles/hover = SubResource("StyleBoxEmpty_8of6i")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ybc3b")
text = "yes"
flat = true

[node name="no" type="Button" parent="quit_dialog" index="2"]
layout_mode = 0
offset_left = 464.0
offset_top = 328.0
offset_right = 703.0
offset_bottom = 374.0
theme_override_colors/font_color = Color(0.136826, 0.136826, 0.136826, 1)
theme_override_colors/font_pressed_color = Color(0.572549, 0.572549, 0.572549, 1)
theme_override_fonts/font = ExtResource("7_0wfsq")
theme_override_font_sizes/font_size = 31
theme_override_styles/focus = SubResource("StyleBoxEmpty_4qog7")
theme_override_styles/hover = SubResource("StyleBoxEmpty_8of6i")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ybc3b")
text = "no no no"
flat = true

[node name="Label" type="Label" parent="quit_dialog" index="3"]
layout_mode = 0
offset_left = 488.0
offset_top = 280.0
offset_right = 795.0
offset_bottom = 318.0
text = "Clear all data ?"
label_settings = SubResource("LabelSettings_3feow")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="toggled" from="settings/blue-light-filter/btn" to="." method="_on_btn_toggled"]
[connection signal="toggled" from="settings/fullscreen/btn2" to="." method="_on_btn_2_toggled"]
[connection signal="pressed" from="settings/clear-data/btn3" to="." method="_on_btn_3_pressed"]
[connection signal="value_changed" from="settings/clear-data2/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="quit_dialog/yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="quit_dialog/no" to="." method="_on_no_pressed"]
